changes base64 decordder usage